[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm-ms2"
version = "0.1.0"
description = "A lightweight vLLM implementation with Qwen3-MoE and speculative decoding support."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "banfeb" },
]

dependencies = [
    "torch>=2.5.0",
    "transformers>=5.2.0",
    "flash-attn>=2.7.4.post1",
    "triton>=3.1.0",
    "numpy>=2.4.2",
    "tqdm>=4.67.3",
    "safetensors>=0.7.0",
    "xxhash>=3.6.0",
    "numba>=0.65.0",
]

[project.urls]
Homepage = "https://github.com/banfeb/nano-vLLM-MS2"
Repository = "https://github.com/banfeb/nano-vLLM-MS2.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nanovllm*"]
